<resources>
    <string name="app_name">DigiKijana</string>
    <string name="action_settings">Settings</string>
    <string name="prefServerDefault">http://41.191.245.72/noyawagh/api/v2/</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="select">Select a category </string>
    <string name="select_audio">Select one to listen</string>
    <string name="settings">Settings</string>
    <string name="language_english">English</string>
    <string name="language_ewe">Ewe</string>
    <string name="reg_date">New Client Registration</string>
    <string name="sex">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="contact_phone_number">Phone Number :</string>
    <string name="address">Location :</string>
    <string name="region">Region :</string>
    <string name="new_client_registration">New Client Registration</string>
    <string name="language_dagbani">Dagbani</string>
    <string name="language_gonja">Gonja</string>
    <string name="language_hausa">Hausa</string>
    <string name="language_dagaare">Dagaare</string>
    <string name="age">Age :</string>
    <string name="education">Education :</string>
    <string name="channel">Channel :</string>
    <string name="language">Language :</string>
    <string name="location_status">Location Status :</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
    <string name="language_kaseem">Kasim</string>
    <string name="language_twi">Twi</string>
    <string name="language_dangme">Dangme</string>
    <string name="Meetings">Meetings</string>
    <string name="male_attendance">Male Attendance :</string>
    <string name="female_attendance">Female Attendance :</string>
    <string name="start">Start</string>
    <string name="meeting_title">Meeting Title :</string>
    <string name="comments">Comments :</string>
    <string name="some_hint">Type here to filter&#8230;</string>
    <string name="youth_and_sex_health">Youth and Sexual Health</string>
    <string name="story_messages">Story Messages</string>
    <string name="radio_series">Radio Series</string>
    <string name="visual_aids">Visual Aids</string>
    <string name="pregnancy_messages">Pregnancy Messages</string>
    <string name="registration">Registration</string>
    <string name="language_2">Select Language</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error_connection_required">You need an active internet connection to access this page. Please turn on wifi or mobile internet connection and try again.</string>
    <string name="error_installing_course">%1$s: failed to install</string>
    <string name="error_latest_already_installed">%1$s: latest version already installed</string>
    <string name="error_login">Invalid username/password\nPlease try again</string>
    <string name="error_media_app_not_found">You don\'t appear to have a media player installed which supports playing this video.</string>
    <string name="error_no_username">Please enter your username</string>
    <string name="error_no_password">Please enter your password</string>
    <string name="error_no_username_or_password">Please enter username and password</string>
    <string name="error_processing_response">Error processing response</string>
    <string name="error_quiz_no_questions">There aren\'t any questions in this quiz.</string>
    <string name="error_resource_app_not_found">You don\'t seem to have an app installed to open \'%1$s\'. Please install an app capable of opening this type of file.</string>
    <string name="error_resource_not_found">File: \'%1$s\' not found.</string>
    <string name="error_sdcard">Your SD card is not available - please restart this app when the SD card is available.\nThe app will now close.</string>
    <string name="error_media_not_found">Media file: \'%1$s\' not found.</string>
    <string name="error_media_unsupported">\'%1$s\' does not appear to be a supported media file type.</string>
    <string name="error_download_failure">Download failed</string>
    <string name="error_update_failure">Update failed</string>
    <string name="error_install_failure">Install failed</string>
    <string name="error_media_download">Error trying to download media, please try again later</string>
    <string name="error_reading_xml">An error occurred trying to load the course. Please reinstall the course.</string>
    <string name="error_tts_start">Text To Speech failed. Please check your phone to ensure have Text to Speech installed and enabled</string>
    <string name="warning_wifi_required">You must be connected to a wifi network to download the media files.\nPlease connect to a wifi network to download the media files on your phone, or download the files via your PC.</string>
    <string name="login_process">Logging in</string>
    <string name="login_complete">Logged in</string>
    <string name="logout_confirm">Are you sure you want to logout?\n\nLogging out will remove all your activity logs from this phone. You will need an active internet connection to log in again.</string>
    <string name="register_process">Registering</string>
    <string name="register_complete">Successfully registered</string>
    <string name="no_access">You do not have access to this module.</string>
    <string name="error_connection">Error connecting to server. Please check you have an active internet connection and try again.</string>
    <string name="user_not_found">User not found. Please register.</string>


    <string name="name">Name</string>
    <string name="client_type">Client type</string>
     <string name="gender">Gender</string>
     <string name="register_mm">Register for Mobile midwife</string>
    <string name="phone">Phone Number</string>
     <string name="voice">Voice</string>
    <string name="sms">Sms</string>
    <string name="program">Program</string>
    <string name="pregnancy_content">Pregnancy Content</string>
    <string name="child_content">Child Content</string>
    <string name="start_week">Start week</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>



    <string-array name="client_type">
        <item>Pregnant woman</item>
        <item>Mother</item>
        <item>Child</item>
        <item>Other</item>
    </string-array>


    <string-array name="loc">
        <item>Urban</item>
        <item>Rural</item>
    </string-array>

    <string-array name="edu">
        <item>SHS</item>
        <item>JHS</item>
        <item>Tertiary</item>
        <item>None</item>
    </string-array>

    <string-array name="languages">
        <item>Latin</item>
        <item>Ewe</item>
        <item>Latin</item>
        <item>Twi</item>
        <item>Swahili</item>
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>



</resources>
