<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingLeft="@dimen/spacing_2"
              android:paddingRight="@dimen/spacing_2"
              android:layout_width="match_parent"
              android:weightSum="6"
              android:layout_height="match_parent">


    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registration"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            />

    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="@dimen/spacing_half"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:padding="@dimen/spacing_quarter"
                android:layout_marginBottom="@dimen/spacing_quarter"
                app:errorTextAppearance="@style/ErrorText"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_normal"

                    android:textColor="@android:color/primary_text_light"
                    android:textColorHighlight="@color/colorAccent"
                    android:inputType="textCapSentences"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatSpinner
                android:visibility="gone"
                android:id="@+id/client_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_half"
                android:entries="@array/client_type"
                android:animateLayoutChanges="true"
                android:dropDownSelector="@color/colorAccent"
                android:prompt="@string/client_type"/>



            <RelativeLayout
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:padding="@dimen/spacing_half"
                android:layout_marginRight="@dimen/spacing_quarter"
                android:layout_marginBottom="@dimen/spacing_half">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select date of Birth"
                    android:textSize="@dimen/text_size_normal"
                    android:maxLines="1"
                    android:layout_centerVertical="true"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_date_range_grey_500_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/spacing_normal"

                    />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_half"
                >

                <CheckBox
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:padding="@dimen/spacing_half"
                    android:checked="true"
                    />


                <CheckBox
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:padding="@dimen/spacing_half"
                    android:layout_marginLeft="@dimen/spacing_3"

                    />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                android:padding="@dimen/spacing_half"
                android:layout_marginTop="@dimen/spacing_2"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_mm"
                    android:layout_centerVertical="true"

                    />


                <Switch
                    android:id="@+id/rmm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>



            <LinearLayout
                android:id="@+id/extraLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="vertical"
                >




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_quarter"
                    app:errorTextAppearance="@style/ErrorText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/phone"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@android:color/primary_text_light"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="numberDecimal"
                        />
                </android.support.design.widget.TextInputLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_normal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/spacing_half"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select Language"
                        android:maxLines="1"
                        android:layout_weight="1"
                         android:textSize="@dimen/text_size_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        />


                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:entries="@array/languages"
                    android:animateLayoutChanges="true"
                    />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_normal"
                    android:weightSum="2"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Location"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/loc"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/loc"
                        android:animateLayoutChanges="true"
                         />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_normal"
                    android:weightSum="2"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Education"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/edu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:entries="@array/edu"
                        android:animateLayoutChanges="true"
                         />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/start_week_layout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_quarter"
                    app:errorTextAppearance="@style/ErrorText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/start_week"
                        android:maxLines="1"
                        android:textColor="@android:color/primary_text_light"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="numberDecimal"
                        />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>




        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        >

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"

            />

    </LinearLayout>


</LinearLayout>